# Prometheus

./: .gitignore  CMakeLists.txt
src/: main.cpp  math_helpers.h
src/camera/: camera.cpp  camera.h
src/geometries/: geometry.cpp  geometry.h  mesh.cpp  mesh.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/init/: embree_device.cpp  embree_device.h  embree_scene.cpp  embree_scene.h
src/parser/: obj_parser.cpp  obj_parser.h
src/ray/: hit_result.h  ray.h  ray_tracer.cpp  ray_tracer.h
src/render/: renderer.cpp  renderer.h  scene_manager.cpp  scene_manager.h  timer.cpp  timer.h
src/structs/: area_light.cpp  area_light.h  global_indices.h  light.h  material.h  vertex.h
